# sigma

./: CMakeLists.txt  README.md
apps/bencher/: bencher_main.cpp  placeholder.cpp
apps/compiler/: compiler_main.cpp
apps/tester/: tester_main.cpp
src/cmd_line/: context.cpp  context.hpp  parser.cpp  parser.hpp
